--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,10 @@
 @import "tw-animate-css";
 @plugin "@tailwindcss/typography";
 
+
+@import "uploadthing/tw/v4";
+@source "../node_modules/@uploadthing/react/dist"; /** <-- depends on your project structure */
+
 :root {
   --background: oklch(0.9940 0 0);
   --foreground: oklch(0 0 0);
